--- a/CSS/name_change.css
+++ b/CSS/name_change.css
@@ -1,13 +1,3 @@
-div.name_chenge{
-  text-align: center;
-  margin-top: 10%;
-  margin-left: 5%;
-  font-size: 160%;
-  font-weight: bold;
-  background-color: lightgray;
-  opacity: 0.8;
-}
-
 /** ヘッダーぐちゃぐちゃにならない用 */
 div.header{
   position: fixed;
@@ -47,4 +37,15 @@ img.background_2{
   margin-left:60%;
   margin-top: -45%;
   z-index:    2;
+}
+
+div.name_chenge{
+  position: fixed;
+  text-align: center;
+  margin-top: 10%;
+  margin-left: 5%;
+  font-size: 160%;
+  font-weight: bold;
+  background-color: lightgray;
+  opacity: 0.8;
 }
