--- a/CSS/dress_up.css
+++ b/CSS/dress_up.css
@@ -29,7 +29,7 @@ div.background_2{
     height:50%;
     vertical-align:center;
     background-size: contain;
-    margin-top: -20%;
+    margin-top: -50%;
 }
 
 div.header{
@@ -44,9 +44,8 @@ div.footer{
     z-index:100000;/*前面に表示*/
 }
 
-/*着せ替えボタン*/
- 
-div.button001 {
+/*購入ボタン*/
+.button001 a{
     text-decoration: none;
     background: rgba(137, 236, 56, 0.849);
     border-color: black;
@@ -56,7 +55,7 @@ div.button001 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top:1%;
+    margin-top:0.1%;
     margin-left:8%;
     max-width: 280px;
     padding: 10px 25px;
@@ -64,15 +63,14 @@ div.button001 {
     transition: 0.1s ease-in-out;
     font-weight: 1000;
     font-family:'Fredoka One', cursive;
-    z-index: 10000000;
 }
-div.button001 :hover {
+.button001 a:hover {
     background: #ffffff;
     color: rgb(0, 0, 0);
     border-color: black;
     border-width: 23px;
 }
-div.button001 :after {
+.button001 a:after {
     border-top: 3px solid #313131;
     border-right: 3px solid #313131;
     transform: rotate(45deg) translateY(-50%);
@@ -82,36 +80,40 @@ div.button001 :after {
     border-radius: 1px;
     transition: 0.3s ease-in-out;
 }
-div.button001 :hover:after {
+.button001 a:hover:after {
     border-color: rgba(31, 30, 30, 0.555);
 }
-
-
-/*着せ替えボタンend*/
+/*購入ボタンend*/
 
 /*衣装一覧*/
-
+p{
+    font-size: 20px;
+}
+.price{
+    margin-top: -0.1%;
+    font-size: 20px;
+    font-family: 'Comic Sans MS';
+}
 .container {
     float: right;
     width: 55%;
-    height: 342px;
+    height: 30%;
     position:relative;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 80% 80%;
-    gap: 20px;
-    margin-top:-38.5%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 48% 48%;
+    gap: 2%;
+    margin-top:-37.5%;
     margin-right: 2%;
 
 }
 
-.grid-item{
+.grid-item {
     background-color: rgba(255, 255, 255, 0.61);
     text-align: center;
     border: 1px solid ;
     border-color:rgb(124, 124, 121);
     border-radius: 7px;
-    margin-top: -1.5%;
 
 }
 .grid-item:hover{
@@ -128,6 +130,7 @@ img.background_3{
     background-size: contain;
     margin-top: -5%;
 }
+
 
 
 /*衣装一覧end*/
