--- a/CSS/dress_up.css
+++ b/CSS/dress_up.css
@@ -1,3 +1,46 @@
+/* 画面遷移アニメーション */
+.md_transition {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  transition: transform 1.5s cubic-bezier(.39, .575, .565, 1) 0.1s;
+    z-index: 999999;
+}
+.md_transition::before {
+
+    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
+    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
+    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
+    content: "";
+    display: block;
+    width: 100%;
+    height: 300%;
+    position: absolute;
+    left: 0;
+    top: -100%;
+}
+body.is_remove .md_transition {
+
+    -webkit-animation: maskCloseTransition .4s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+    animation: maskCloseTransition .1s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+
+}
+body:not(.is_fade) .md_transition {
+    transform: translateY(-200%);
+}
+@-webkit-keyframes maskCloseTransition {
+
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
+@keyframes maskCloseTransition {
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
+
 body{
     margin:0px;
     margin-bottom:0px;
@@ -16,6 +59,7 @@ img.background_1{
 }
 img.background_2{
     position:relative;
+    margin-top: 5%;
     margin-left: 8%;
     width: 30%;
     height:20%;
@@ -57,12 +101,13 @@ div.footer{
     align-items: center;
     margin-top:0.1%;
     margin-left:8%;
-    max-width: 280px;
+    width: 20%;
     padding: 10px 25px;
     color: #313131;
     transition: 0.1s ease-in-out;
     font-weight: 1000;
-    font-family:'Fredoka One', cursive;
+    font-family: 'Kosugi Maru', sans-serif;
+
 }
 .button001 a:hover {
     background: #ffffff;
@@ -87,12 +132,14 @@ div.footer{
 
 /*衣装一覧*/
 p{
-    font-size: 20px;
+    font-size: 150%;
+    font-family: 'Kosugi Maru', sans-serif;
+    font-weight: 500;
 }
 .price{
     margin-top: -0.1%;
     font-size: 20px;
-    font-family: 'Comic Sans MS';
+    font-family: 'Kosugi Maru', sans-serif;
 }
 .container {
     float: right;
@@ -103,11 +150,10 @@ p{
     grid-template-columns: 50% 50%;
     grid-template-rows: 48% 48%;
     gap: 2%;
-    margin-top:-37.5%;
+    margin-top:-35.5%;
     margin-right: 2%;
 
 }
-
 .grid-item {
     background-color: rgba(255, 255, 255, 0.61);
     text-align: center;
@@ -129,8 +175,8 @@ img.background_3{
     vertical-align: top;
     background-size: contain;
     margin-top: -5%;
+    padding-bottom: 5%;
 }
-
 
 
 /*衣装一覧end*/
