--- a/CSS/character.css
+++ b/CSS/character.css
@@ -63,11 +63,11 @@ div.fan-var{
   border-radius: 10px;
 }
 
-div.fan-var2{
+/* div.fan-var2{
   background-color: #61EDB0;
   border-radius: 10px;
   height:10px;
-}
+} */
 
 div > div {
   transform: translateX(calc(-200% + var(--w)));
